# odoo-mcp-server

./: pyproject.toml  server.py
