[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-mcp-server"
version = "0.1.0"
description = "Odoo MCP Server - Access and manage Odoo data through MCP protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "google-genai>=1.27.0", 
    "mcp>=1.12.2",
    "odoorpc>=0.10.1",
    "requests>=2.32.4",
]

[project.scripts]
odoo-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]  # Tell setuptools to include server.py